# hexagent

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md
.github/workflows/: _lint.yml  _test.yml  ci.yml
docs/: cowork_mount_permission_troubleshooting_prompt.md  windows-installer-regression-checklist.md
libs/clawwork/: AGENTS.md  Makefile  README.md  pyproject.toml
libs/hexagent_demo/backend/: .gitignore  pyproject.toml
libs/hexagent_demo/backend/clawwork_api/: __init__.py  agent_manager.py  config.py  main.py  models.py  paths.py  server.py  store.py
libs/hexagent_demo/backend/clawwork_api/routes/: chat.py  config.py  conversations.py  sessions.py  setup.py  skills.py
libs/hexagent_demo/backend/hexagent_api/: agent_manager.py  config.py  main.py  paths.py  stream_manager.py
libs/hexagent_demo/backend/hexagent_api/routes/: chat.py  config.py  conversations.py  mac_setup.py  sessions.py  setup.py  skills.py
libs/hexagent_demo/backend/skills/email-mail-master/scripts/: email_manager.py
libs/hexagent_demo/backend/skills/public/pptx/: examin.md  outlineWriting.md  skill.md  uploadprocess.md  websearch.md
libs/hexagent_demo/backend/skills/public/pptx/scripts/: process_upload.py
libs/openagent_demo/backend/: .gitignore  pyproject.toml
libs/openagent_demo/backend/openagent_api/: __init__.py  agent_manager.py  config.py  main.py  models.py  paths.py
libs/openagent_demo/backend/openagent_api/routes/: chat.py  config.py  conversations.py  sessions.py  setup.py  skills.py
(+423 files in other folders)
