[project]
name = "openagent-demo-backend"
version = "0.1.0"
description = "FastAPI backend for OpenAgent demo"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "python-dotenv>=1.0.0",
    "langchain-deepseek>=0.1.0",
    "openagent",
]

[tool.uv.sources]
openagent = { path = "../../openagent", editable = true }
